# SKN24-3rd-6Team

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: vectordb_usage.md
notebooks/: RAG_pipeline_test_scenario.ipynb  collect_raw.ipynb  collect_raw_prec.ipynb  langgraph_integration.ipynb  langgraph_pipeline.ipynb
scripts/: build_vectorstore.py
src/: config.py
src/graph/: __init__.py  pipeline.py  state.py
src/graph/nodes/: check_relevance.py  expression_revision.py  formatter.py  generator.py  intent_understanding.py  query_summary.py  retrieve.py
src/ingest/: indexer.py
src/ui/: app.py  styles.py
src/ui/components/: chat.py  sidebar.py
src/vectordb/: embedder.py
tests/: rag_pipeline_evaluation.ipynb  rag_revise_pipeline_evaluation.ipynb
